how it works options and service worker page

--- a/timer-extension/popup.html
+++ b/timer-extension/popup.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Timer extension</h1>
     <h2 id="time"></h2>
+    <h2 id="name"></h2>
     <script src="popup.js"></script>
   </body>
 </html>
