--- a/timer-extension/options.html
+++ b/timer-extension/options.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Timer extension Options</title>
+    <title>Timer Extension Options</title>
+    <link rel="stylesheet" href="options.css" />
   </head>
   <body>
-    <h1>Timer extension options</h1>
+    <h1>Timer Extension options</h1>
+    <input type="text" id="name-input" placeholder="Enter your name" />
+    <button id="save-btn">Save Options</button>
   </body>
+  <script src="options.js"></script>
 </html>
