--- a/timer-extension/options.html
+++ b/timer-extension/options.html
@@ -10,6 +10,12 @@
   <body>
     <h1>Timer Extension options</h1>
     <input type="text" id="name-input" placeholder="Enter your name" />
+    <input
+      type="number"
+      id="time-input"
+      placeholder="Notification time in seconds"
+      min="0"
+    />
     <button id="save-btn">Save Options</button>
   </body>
   <script src="options.js"></script>
