--- a/timer-extension/popup.html
+++ b/timer-extension/popup.html
@@ -11,6 +11,10 @@
     <h1>Timer extension</h1>
     <h2 id="time"></h2>
     <h2 id="name"></h2>
+    <h2 id="timer"></h2>
+    <button id="start-btn">Start Timer</button>
+    <button id="stop-btn">Stop Timer</button>
+    <button id="reset-btn">Reset Timer</button>
     <script src="popup.js"></script>
   </body>
 </html>
